Added many-to-one relationship to entities, problems with tables with mixed case on it, they are looked for in lower case

--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
+        
+        <!-- MySql connector ( JUST FOR TEST PURPOSES) -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
 		
 		<!-- Oracle 18c jdbc driver -->
 		<dependency>
