--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=5000
 ##Database Configuration
 spring.datasource.url= jdbc:oracle:thin:@localhost:1521:xe
 spring.datasource.username=natame
-spring.datasource.password=natame5k4f7f2
+spring.datasource.password=natame
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 
 
