Updated Model and tables names on DAO

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 server.port=5000
 ##Database Configuration
 spring.datasource.url= jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.username=natame
-spring.datasource.password=natame
+spring.datasource.username=adminnatame
+spring.datasource.password=AdminNatame
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 
 
