--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ##Run on port 5000
-server.port=80
+server.port=5000
 ##Database Configuration
-spring.datasource.url= jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.url= jdbc:oracle:thin:@glud.org:8004:xe
 spring.datasource.username=adminnatame
 spring.datasource.password=12345
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
